--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <main>
             <lookup-box></lookup-box>
             <success-notice-bar></success-notice-bar>
+            <p class="copywrite">&copy 2024 - Joseph's Random Stuff</p>
         </main>
         <!-- VUE -->
         <script src="https://cdn.jsdelivr.net/npm/vue@3.4.27/dist/vue.global.min.js"></script>
