--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <main>
-            <h1>Parts Copy App</h1>
+            <h1>Part Number Copy/Paste</h1>
             <lookup-box></lookup-box>
             <success-notice-bar></success-notice-bar>
             <p class="copywrite">&copy 2024 - Joseph's Random Stuff</p>
