Added Mode Switching
Working on users and service-mode side.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     </head>
     <body>
         <main>
-            <h1>Part Number Copy/Paste</h1>
-            <lookup-box></lookup-box>
-            <success-notice-bar></success-notice-bar>
+            <mode-toggle></mode-toggle>
+            <user-icon></user-icon>
+            <parts-mode></parts-mode>
+            <service-mode></service-mode>
             <p class="copywrite">&copy 2024 - Joseph's Random Stuff</p>
         </main>
         <!-- VUE -->
@@ -18,5 +19,7 @@
         <script src="./datapi.js"></script>
         <script src="./classes.js"></script>
         <script src="./main.js"></script>
+        <script src="./user.js"></script>
+        <script src="./service-mode.js"></script>
     </body>
 </html>
